--- a/_config.yml
+++ b/_config.yml
@@ -141,12 +141,12 @@ translate_langs: []
 
 # If you want to link only specific pages in your header, uncomment
 # this and add the path to the pages in order as they should show up
-# header_pages:
-#   - index.html
-#   - archives.html
-#   - categories.html
-#   - tags.html
-#   - about.md
+header_pages:
+  - index.html
+  - call-for-papers.md
+  - register-and-submit.md
+  - program.md
+  - about.md
 
 # Page default value
 # defaults:
