--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,11 @@ copyright: "Copyright (c) 2021 {author}"
 description: >- # this means to ignore newlines until "baseurl:"
    - The XIII Majorov International Conference on Software Engineering and Computer Systems
 
-#baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: 
+sass:
+  sass_dir: _sass
+  style: :compressed
+  #"" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 favicon: "" # the favicon for your site
 
