Remove program page and move school description to main.

--- a/_config.yml
+++ b/_config.yml
@@ -147,7 +147,7 @@ night_mode: "off"
 # this and add the path to the pages in order as they should show up
 header_pages:
   - index.html
-  - program.md
+  # - program.md
   - contact.md
 
 # Page default value
